--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <h1>This is a test</h1>
+    <script src="/static/JS/timer.js"></script>
+    <script src="/static/JS/app.js"></script>
   </body>
 </html>
