Add Workout and DoublyLinkedList classes and logic.

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
     <h1>This is a test</h1>
     <script src="/static/JS/timer.js"></script>
     <script src="/static/JS/app.js"></script>
+    <script src="/static/JS/workout.js"></script>
   </body>
 </html>
