added base frontend
*added base front end for application

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- style sheets -->
+    <link rel="stylesheet" href="/static/CSS/main.css" />
     <title>HIIT The Clock</title>
   </head>
   <body>
-    <h1>This is a test</h1>
+    <header>
+      <img src="/static/images/clockLogo.png" alt="Clock Logo" />
+      <h1>Hit The Clock</h1>
+    </header>
+    <!-- This will be where the call of action is -->
+    <div class="call-to-action">
+      <h2>Punch in your workout today</h2>
+      <button>Start</button>
+    </div>
+    <!-- scripts  -->
     <script src="/static/JS/user.js"></script>
     <script src="/static/JS/timer.js"></script>
     <script src="/static/JS/app.js"></script>
