--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- style sheets -->
     <link rel="stylesheet" href="/static/CSS/main.css" />
+    <link rel="stylesheet" href="/static/CSS/index.css" />
     <title>HIIT The Clock</title>
   </head>
   <body>
     <header>
       <img src="/static/images/clockLogo.png" alt="Clock Logo" />
-      <h1>Hit The Clock</h1>
+      <h1>HIT THE CLOCK</h1>
     </header>
     <!-- This will be where the call of action is -->
     <div class="call-to-action">
