--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <!-- This will be where the call of action is -->
     <div class="call-to-action">
       <h2>Punch in your workout today</h2>
-      <button><a href="{{ url_for('user_form') }}">Start</a></button>
+      <a href="{{ url_for('user_form') }}"><button>Start</button></a>
     </div>
     <!-- scripts  -->
     <script src="/static/JS/user.js"></script>
