--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -1,25 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- style sheets -->
-    <title>HIIT The Clock</title>
-  </head>
-  <body>
-    <header>
-      <h1>Hit The Clock</h1>
-    </header>
-    <!-- This will be where the call of action is -->
-    <div class="call-to-action">
-      <h2>Enter your info sucka.</h2>
-      <button>Next</button>
+{%extends "index.html"%}
+<!-- Title -->
+{%block title%}
+<title>User Input</title>
+{%endblock%}
+<!-- Styles -->
+{%block styles%}
+<link rel="stylesheet" href="/static/CSS/user_form.css" />
+{%endblock%}
+<!-- content -->
+{%block content%}
+<div class="input-section">
+  <form action="POST">
+    <!-- input header -->
+    <div class="input-names">
+      <h3>Weight</h3>
+      <h3>Height</h3>
+      <h3>Age</h3>
     </div>
-    <!-- scripts  -->
-    <script src="/static/JS/user.js"></script>
-    <script src="/static/JS/timer.js"></script>
-    <script src="/static/JS/app.js"></script>
-    <script src="/static/JS/workout.js"></script>
-  </body>
-</html>
+    <!-- inputs -->
+    <div class="text-inputs">
+      <input type="text" />
+      <input type="text" />
+      <input type="text" />
+    </div>
+    <!-- difficulty selector -->
+    <h3>Difficulty</h3>
+    <div class="difficulty-selector">
+      <input type="radio" id="easy" name="difficulty" value="1" />
+      <label for="easy">EASY</label><br />
+      <input type="radio" id="average" name="difficulty" value="2" />
+      <label for="average">MEDIUM</label><br />
+      <input type="radio" id="INTENSE" name="difficulty" value="3" />
+      <label for="javascript">INTENSE</label>
+    </div>
+  </form>
+</div>
+{%endblock%}
