added main styles to user_form
*added css and html for user form

--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -40,7 +40,7 @@ h2 {
 
 button {
   background-color: #dd7000;
-  color: #dbdbdb;
+  color: #e9e9e9;
   font-size: 24px;
   border: none;
   width: 250px;
@@ -49,7 +49,7 @@ button {
 }
 
 button a {
-  color: #dbdbdb;
+  color: #e9e9e9;
   text-decoration: none;
 }
 
