--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -35,6 +35,6 @@
     </div>
   </form>
 </div>
-<button>Generate Workout</button>
+<button id="submit" onclick="storeValues()">Generate Workout</button>
 <script src="/static/JS/user_form.js"></script>
 {%endblock%}
