--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -36,5 +36,5 @@
   </form>
 </div>
 <button id="submit" onclick="storeValues()">Generate Workout</button>
-<script src="/static/JS/user_form.js"></script>
+<script src="/static/JS/user_data.js"></script>
 {%endblock%}
