--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -19,9 +19,9 @@
     </div>
     <!-- inputs -->
     <div class="text-inputs">
-      <input type="text" />
-      <input type="text" />
-      <input type="text" />
+      <input id="weight" type="text" />
+      <input id="height" type="text" />
+      <input id="age" type="text" />
     </div>
     <!-- difficulty selector -->
     <h3 id="difficulty-header">Difficulty</h3>
