--- a/templates/workout.html
+++ b/templates/workout.html
@@ -25,4 +25,8 @@
   <button>next</button>
   <button>skip</button>
 </div>
+<script src="/static/JS/user.js"></script>
+<script src="/static/JS/timer.js"></script>
+<script src="/static/JS/workout.js"></script>
+<script src="/static/JS/app.js"></script>
 {%endblock%}
