--- a/templates/workout.html
+++ b/templates/workout.html
@@ -29,4 +29,7 @@
 <script src="/static/JS/timer.js"></script>
 <script src="/static/JS/workout.js"></script>
 <script src="/static/JS/app.js"></script>
+<script>
+  runApp('{{weight}}', '{{height}}', '{{age}}', '{{difficulty}}');
+</script>
 {%endblock%}
