added next button dom element

--- a/templates/workout.html
+++ b/templates/workout.html
@@ -22,8 +22,8 @@
 <div class="controls">
   <button>previous</button>
   <button>pause</button>
-  <button>next</button>
-  <button>skip</button>
+  <button id="next">next</button>
+  <!-- <button>skip</button> -->
 </div>
 <script src="/static/JS/user.js"></script>
 <script src="/static/JS/timer.js"></script>
