--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <img src="/static/images/clockLogo.png" alt="Clock Logo" />
-      <h1>HIT THE CLOCK</h1>
+      <h1>HIIT THE CLOCK</h1>
     </header>
     {%block content%}
     <!-- This will be where the call of action is -->
