--- a/flask-backend/templates/user_form.html
+++ b/flask-backend/templates/user_form.html
@@ -39,4 +39,5 @@
   Generate Workout
 </button>
 <script src="/static/JS/user_data.js"></script>
+<script src="/static/JS/form.js"></script>
 {%endblock%}
