Get workouts from generate_workout function in api

--- a/flask-backend/templates/user_form.html
+++ b/flask-backend/templates/user_form.html
@@ -10,7 +10,7 @@
 <!-- content -->
 {%block content%}
 <div class="input-section">
-  <form id="user-inputs" action="#" method="post">
+  <form id="user-inputs" action="http://localhost:5000/user_form" method="POST">
     <!-- input header -->
     <div class="input-names">
       <h3>Weight (LB)</h3>
