cleaned up session
cleaned up session storage so its easier to work with

--- a/flask-backend/templates/user_form.html
+++ b/flask-backend/templates/user_form.html
@@ -19,9 +19,9 @@
     </div>
     <!-- inputs -->
     <div class="text-inputs">
-      <input id="weight" type="text" name="weight" />
-      <input id="height" type="text" name="height" />
-      <input id="age" type="text" name="age" />
+      <input type="number" id="weight" type="text" name="weight" />
+      <input type="number" id="height" type="text" name="height" />
+      <input type="number" id="age" type="text" name="age" />
     </div>
     <!-- difficulty selector -->
     <h3 id="difficulty-header">Difficulty</h3>
