--- a/flask-backend/static/CSS/user_form.css
+++ b/flask-backend/static/CSS/user_form.css
@@ -33,6 +33,17 @@ h3 {
   padding-left: 12px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 /* for difficulty selector */
 
 #difficulty-header {
